# lasso

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
prototype/: index.html
research/: 2026-05-07_youtube-channel-bulk-downloader-landscape.md
scripts/: fetch-binaries.sh
src/: App.tsx  api.ts  format.ts  icons.tsx  main.tsx  theme.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/research/: 2026-05-07_youtubedaki-kanalın-tüm-videolarını-indirebileceği.md
src-tauri/src/: commands.rs  coordinator.rs  db.rs  lib.rs  main.rs  models.rs  ytdlp.rs
src/components/: ActivityDrawer.tsx  AddChannelSheet.tsx  AudioSettingsSheet.tsx  ChannelHeader.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DownloadAllSheet.tsx  FilterBar.tsx  SettingsSheet.tsx  Sidebar.tsx  SkeletonVideoCard.tsx  Toast.tsx  Toolbar.tsx  VideoCard.tsx
