[package]
name = "lasso"
version = "0.0.1"
description = "Auto-archive YouTube channels to your local disk."
authors = ["Lasso contributors"]
license = "MIT"
repository = "https://github.com/nsozturk/lasso"
edition = "2021"

[lib]
name = "lasso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
anyhow = "1"
